--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">画稽</string>
+    <string name="app_name">滑稽脸漫画</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
